--- a/index.html
+++ b/index.html
@@ -24,7 +24,6 @@
                 <div onclick="toggleMenu()" class="nav-banner banner">
                     <img src="assets/nav-banner-close.png" class="close-btn" onclick="toggleMenu()">
                 </div>
-
                 <li onclick="underlineActive(this)" class="nav-link active"><a href="#">Topic</a>
                     <img src="assets/mobile-nav.png" alt="Arrow" class="mobile-arrow">
                 </li>
@@ -151,9 +150,8 @@
                     <a class="linkedin-logo" href="https://www.linkedin.com/in/daniel-ringenbach/" target="_blank"><img
                             src="assets/overlayLinkedin.png" alt="LinkedIn Logo"></a>
                 </div>
-                <h3 id="overlay-position" alt="Overlay Position">
-                    </h2>
-                    <p id="overlay-bio" alt="Overlay Bio"></p>
+                <h3 id="overlay-position" alt="Overlay Position"></h3>
+                <p id="overlay-bio" alt="Overlay Bio"></p>
             </div>
         </div>
     </div>
